--- a/style.css
+++ b/style.css
@@ -50,7 +50,42 @@ header {
     border: 1.25px dashed lightgray;
 }
 
-/* MENU*/
+/* POPUP */
+
+#conteneur {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 98vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.637);
+    position: absolute;
+    z-index: 100;
+}
+
+#popup {
+    position: relative;
+    text-align: center;
+    background-color: white;
+    border: 2px dashed black;
+    width: 40%;
+    border-radius: 15px;
+}
+
+.close {
+    position: absolute;
+    top: -10px;
+    right: -34px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fa393d;
+    padding: 2px;
+    border-radius: 10%;
+    cursor: pointer;
+}
+
+/* MENU */
 
 nav {
     text-align: right;
